<resources>
    <string name="app_name">RecyclingApp</string>
    <string name="nav_home">Home</string>
    <string name="nav_scan">Scan</string>
    <string name="nav_map">Map</string>
    <string name="nav_achievement">Achievement</string>
    <string name="nav_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>